--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-    "name": "zd-capability-param",
-    "version": "1.0.1",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "nyc --reporter=html  mocha  --bail --timeout 10000 --check-leaks test",
-        "test-ci": "nyc --reporter=lcov  mocha test  --timeout 10000  --check-leaks "
-    },
-    "keywords": [],
-    "author": "Pedro Narciso García Revington <p.revington@gmail.com> (https://github.com/revington)",
-    "license": "MIT",
-    "devDependencies": {
-        "express": "^4.17.2",
-        "mocha": "^9.1.4",
-        "nyc": "^15.1.0"
-    }
+	"name": "zd-capability-param",
+	"version": "2.0.2",
+	"description": "Library to create, validate and decode capability url tokens.  ",
+	"main": "index.js",
+	"scripts": {
+		"test": "nyc --reporter=html  mocha  --bail --timeout 10000 --check-leaks test",
+		"test-ci": "nyc --reporter=lcov  mocha test  --timeout 10000  --check-leaks "
+	},
+	"keywords": [
+		"capability url",
+		"capability params",
+		"transactional urls"
+	],
+	"author": "Pedro Narciso García Revington <p.revington@gmail.com> (https://github.com/revington)",
+	"license": "MIT",
+	"devDependencies": {
+		"express": "^4.17.2",
+		"mocha": "^9.1.4",
+		"nyc": "^15.1.0"
+	},
+	"engines": {
+		"node": ">=12"
+	},
+	"dependencies": {
+		"jsdoc": "^3.6.7"
+	}
 }
