--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
 	"license": "MIT",
 	"devDependencies": {
 		"express": "^4.17.2",
+		"jsdoc": "^3.6.7",
 		"mocha": "^9.1.4",
 		"nyc": "^15.1.0"
 	},
 	"engines": {
 		"node": ">=12"
 	},
-	"dependencies": {
-		"jsdoc": "^3.6.7"
-	}
+	"dependencies": {}
 }
